# lamteteeow.github.io

./: .gitignore  .opencode.json  AGENTS.md  README.md  fetch_data.py  index.html  pyproject.toml
.github/workflows/: opencode.yml  recession_update.yml
.opencode/plans/: 1778983772308-quick-forest.md
data/: macro_risk.json
tests/: test_scoring.py
