[project]
name = "macro-pulse"
version = "0.1.0"
description = "A Recession Risk Dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fredapi>=0.5.1",
    "polars>=1.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.hatch.build.targets.wheel]
packages = ["."]
